Fixing speakers layout on iPhone 6

--- a/stylesheets/index.less
+++ b/stylesheets/index.less
@@ -61,11 +61,11 @@ a.hilite:hover {
 
   .speaker-box {
     text-align: center;
-    width: 150px;
-    margin: 30px 20px;
+    width: 140px;
+    margin: 30px 15px;
 
     img {
-      width: 150px;
+      width: 140px;
       height: auto;
       margin: 0 0 15px;
       display: block;
